# GILDA

./: .gitignore  LICENSE  README.md  config.json  content_callback_header.lua  content_callback_source.lua  content_intercept_table_mgr_header.lua  content_intercept_table_mgr_source.lua  content_intercepted_functions_header.lua  content_intercepted_functions_source.lua  generate_interceptor.lua  gilda.lua  install.sh  interceptor_build.lua  interceptor_generate.lua  io_interceptor.lua  logfile.txt  test.cpp  test.csv  test.txt
Sample/: config.json  strings.ini
Sample-Content/: Makefile  default_config.json  sample_config.json  trace_me.c
Sample-Content/contents/: string_content.lua
Sample-Content/default_csv/: functions_sample.csv
Sample-Content/dyn_mem_csv/: functions_sample.csv
Sample/template/src/core/: CMakeLists.txt  api_table_mgr_c.lua  api_table_mgr_h.lua  callback_c.lua  callback_h.lua  interceptor_c.lua  interceptor_h.lua  lifecycle_c.lua  lifecycle_h.lua  status.lua  time_c.lua  time_h.lua
Sample/template/src/core/autogen/: intercepted_functions_c.lua  intercepted_functions_h.lua
Sample/template/src/core/common/: env.c  env_h.lua
Sample/template/src/core/mangen/: intercepted_functions_c.lua
Sample/template/src/core/tools/: plugin_h.lua  tool.lua
Sample/template/src/core/wrapper/: functions_c.lua
csv/hip/: hip_function.csv  (+2 more)
script/: CTypeManager.lua  CVar.lua  Content.lua  ContentManager.lua  FileManager.lua  c_manager.lua  common.lua  header_parser.py  hparse_funcToCsv.lua  io_interceptor.lua  parser.lua  string_generator.lua  test.lua
(+110 files in other folders)
